welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
max1020:6: error: Boolean does not take parameters
    else (a<b){
              ^